# MiniShell

./: .gitignore  CMakeLists.txt  README.md
src/: mini_shell.c
